--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <button id="sumBtn">Sumar</button>
     <div id="result"></div>
 
+    <h2>Cristian Imanol Zapata Tafur</h2>
 
     <script src="main.js"></script>
 </body>
